[gd_scene load_steps=7 format=3 uid="uid://c0vgq3wpfflww"]

[ext_resource type="Script" uid="uid://clvmo77xu30yn" path="res://Scripts/SpaceLevel/Enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://clhxr5ky6oqu8" path="res://Assets/Sprites/ini_4.png" id="2"]
[ext_resource type="Texture2D" uid="uid://clmcl2rjlx56m" path="res://Assets/Sprites/ini_1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://drpcdaik58gxn" path="res://Assets/Sprites/ini_3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d2a4plnvyqos2" path="res://Assets/Sprites/ini_2.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 12)

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1")

[node name="sprite_enemy1" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3")

[node name="sprite_enemy2" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -1.5708
texture = ExtResource("5")

[node name="sprite_enemy3" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -1.5708
texture = ExtResource("4")

[node name="sprite_enemy4" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -1.5708
texture = ExtResource("2")

[node name="enemyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 7.62939e-07)
scale = Vector2(0.8, 0.7)

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
